//
// protoc --java_out=src/main/java/ --proto_path=/path/to/mesos/include/mesos/ --proto_path=src/main/proto/ \
//   src/main/proto/marathon.proto
//
package mesosphere.marathon;

option java_package = "mesosphere.marathon";
option java_outer_classname = "Protos";

import "mesos.proto";

message ServiceDefinition {
  required string id = 1;
  required mesos.CommandInfo cmd = 2;
  required uint32 instances = 3;
  repeated mesos.Resource resources = 4;
  optional string description = 5;
  optional uint32 port = 6;
  optional double rackAffinity = 7;
  optional double nodeAffinity = 8;
}
